# src/models/Gear.js
@@ -1,9 +1,12 @@
 const { v4: uuidv4 } = require('uuid');
 
 class Gear {
-    constructor(id = uuidv4(), type, armour) {
+    constructor(id = uuidv4(), name, category, armour) {
         this.id = id;
-        this.type = type;
+        this.name = name;
+        this.category = category;
         this.armour = armour;
     }
 }
+
+module.exports = Gear;
