# src/models/Weapon.js
@@ -1,11 +1,13 @@
 const { v4: uuidv4 } = require('uuid');
 
 class Weapon {
-    constructor(id = uuidv4(), name, type, damage, unique) {
+    constructor(id = uuidv4(), name, category, damage) {
         this.id = id;
         this.name = name;
-        this.type = type;
+        this.category = category;
         this.damage = damage;
-        this.unique = unique;
+        
     }
 }
+
+module.exports = Weapon;
